--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>call-service</module>
-        <module>eureka-server</module>
-        <module>hs-service</module>
-        <module>zuul-service</module>
+        <module>call_service</module>
+        <module>eureka_server</module>
+        <module>hs_service</module>
+        <module>zuul_service</module>
     </modules>
 
     <parent>
