--- a/call_service/src/main/resources/application-test.properties
+++ b/call_service/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 server.port=8882
 # 服务的名称
-spring.application.name=call-service
+spring.application.name=call_service
 # 指定服务的地址,向服务中注册
 erueka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
