--- a/call_service/pom.xml
+++ b/call_service/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.yushu</groupId>
-	<artifactId>call-service</artifactId>
+	<artifactId>call_service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>call-service</name>
+	<name>call_service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
