--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>call_service</module>
+        <!--<module>call_service</module>-->
         <module>eureka_server</module>
-        <module>hs_service</module>
-        <module>zuul_service</module>
+        <!--<module>hs_service</module>-->
+        <!--<module>zuul_service</module>-->
     </modules>
 
     <parent>
