--- a/hs_service/src/main/resources/application.properties
+++ b/hs_service/src/main/resources/application.properties
@@ -2,11 +2,10 @@
 server.port=8881
 
 # 服务的名称
-spring.application.name=hs_service
-
-file.uploadPath=''
+spring.application.name=hs-service
 
 #database
+driverClassPath=C:/Users/yushu/.m2/repository/mysql/mysql-connector-java/5.1.39/mysql-connector-java-5.1.39.jar
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://47.92.218.64:3306/hearthstone?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
@@ -22,7 +21,7 @@ tagetMapperBase=com.yushu.mapper
 
 mapper.plugin = tk.mybatis.mapper.generator.MapperPlugin
 mapper.Mapper = tk.mybatis.mapper.common.Mapper
-driverClassPath=C:/Users/yushu/.m2/repository/mysql/mysql-connector-java/5.1.39/mysql-connector-java-5.1.39.jar
+
 
 mybatis.typeAliasesPackage=com.yushu.model
 mybatis.mapperLocations=classpath*:mybatis/*.xml
@@ -38,7 +37,6 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 erueka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 # zipkin记录当前链路追踪
-spring.zipkin.base-url=http://47.92.218.64:9411/zipkin/
+#spring.zipkin.base-url=http://47.92.218.64:9411/zipkin/
 # 默认采样百分比是10%
-spring.sleuth.sampler.probability=1
-name=local
+#spring.sleuth.sampler.probability=1
