--- a/zuul_service/pom.xml
+++ b/zuul_service/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.yushu</groupId>
-	<artifactId>zuul-service</artifactId>
+	<artifactId>zuul_service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
-	<name>zuul-service</name>
+	<name>zuul_service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>com.yushu.manage</groupId>
-		<artifactId>multi-project</artifactId>
+		<artifactId>multi_project</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
@@ -42,24 +42,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>test</id>
-			<properties>
-				<env>test</env>
-				<war.name>${env}/${project.version}/${project.name}</war.name>
-			</properties>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-		</profile>
-		<profile>
-			<id>prod</id>
-			<properties>
-				<env>prod</env>
-				<war.name>${env}/${project.version}/${project.name}</war.name>
-			</properties>
-		</profile>
-	</profiles>
 </project>
