--- a/zuul_service/src/main/resources/application.properties
+++ b/zuul_service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8885
-spring.application.name=zuul_service
+spring.application.name=zuul-service
 
 erueka.client.serviceUrl.defaultZone=http://localhost:8760/eureka/
 
