--- a/call_service/src/main/resources/application.properties
+++ b/call_service/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.application.name=call-service
 erueka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 
-feign.client.config.default.connectTimeout=1000
+feign.client.config.default.connectTimeout=11000
 # 设置Feign读取服务接口的超时时间
-feign.client.config.default.readTimeout=2000
+feign.client.config.default.readTimeout=12000
 
 # 接口访问频繁的时候开启熔断降级保护
 feign.hystrix.enabled=true
 # 设置hystrix默认超时时间，默认是1秒
-execution.isolation.thread.timeoutInMilliseconds=2000
+execution.isolation.thread.timeoutInMilliseconds=12000
 
 spring.redis.database=0
 spring.redis.host=127.0.0.1
@@ -20,6 +20,6 @@ spring.redis.port=6379
 spring.redis.timeout=2000
 
 # zipkin记录当前链路追踪
-spring.zipkin.base-url=http://47.92.218.64:9411/zipkin/
+#spring.zipkin.base-url=http://47.92.218.64:9411/zipkin/
 # 默认采样百分比是10%
-spring.sleuth.sampler.probability=1
+#spring.sleuth.sampler.probability=1
