--- a/call_service/src/main/resources/application.properties
+++ b/call_service/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.redis.port=6379
 spring.redis.timeout=2000
 
 # zipkin记录当前链路追踪
-#spring.zipkin.base-url=http://47.92.218.64:9411/zipkin/
+spring.zipkin.base-url=http://47.92.218.64:9411/
+spring.sleuth.web.client.enabled=true 
 # 默认采样百分比是10%
-#spring.sleuth.sampler.probability=1
+spring.sleuth.sampler.probability=1.0
