--- a/eureka_server/src/main/resources/application.yml
+++ b/eureka_server/src/main/resources/application.yml
@@ -5,14 +5,14 @@ eureka:
   instance:
     hostname: localhost
   client:
-    # ±íÃ÷×Ô¼ºÊÇÒ»¸ö·şÎñ,²»×¢²á×Ô¼º
+    # è¡¨æ˜è‡ªå·±æ˜¯ä¸€ä¸ªæœåŠ¡,ä¸æ³¨å†Œè‡ªå·±
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
     server:
-      # ·şÎñ¶ËÎ¬»¤Ò»¸öËùÓĞ·şÎñµÄÁĞ±í
-      # ÓÃ»§ÏÂµ¥È¥·şÎñÖĞĞÄµ÷È¡×¢²áµÄ·şÎñµØÖ·£¬Èç¹ûÍøÂçÓĞ²¨¶¯¿ÉÄÜ·şÎñ×¢²á²»ÉÏÈ¥
-      # Õâ¸öÊÇÌŞ³ıÍøÂçÓĞ²¨¶¯µÄ·şÎñ(·şÎñÊ±ÓĞÊ±ÎŞ),ÏÂÃæÕâ¸öÊÇ²»ÌŞ³ı·şÎñµÄÒâË¼
-      # ×ÔÎÒ±£»¤Ä£Ê½
+      # æœåŠ¡ç«¯ç»´æŠ¤ä¸€ä¸ªæ‰€æœ‰æœåŠ¡çš„åˆ—è¡¨
+      # ç”¨æˆ·ä¸‹å•å»æœåŠ¡ä¸­å¿ƒè°ƒå–æ³¨å†Œçš„æœåŠ¡åœ°å€ï¼Œå¦‚æœç½‘ç»œæœ‰æ³¢åŠ¨å¯èƒ½æœåŠ¡æ³¨å†Œä¸ä¸Šå»
+      # è¿™ä¸ªæ˜¯å‰”é™¤ç½‘ç»œæœ‰æ³¢åŠ¨çš„æœåŠ¡(æœåŠ¡æ—¶æœ‰æ—¶æ— ),ä¸‹é¢è¿™ä¸ªæ˜¯ä¸å‰”é™¤æœåŠ¡çš„æ„æ€
+      # è‡ªæˆ‘ä¿æŠ¤æ¨¡å¼
       #enable-self-preserveation: false
