--- a/zuul_service/src/main/resources/application.properties
+++ b/zuul_service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=zuul-service
 
 erueka.client.serviceUrl.defaultZone=http://localhost:8760/eureka/
 
-# http://localhost:8885/call-service/getCardById?id=2- 之前调用服务的地址(再代码里)
+# http://localhost:8882/getCardKind - 之前调用服务的地址(再代码里)
 # http://localhost:8885/apigateway/call/getCardById?id=2 - 添加zuul后，用网关调用服务的地址
 
 # 自定义路由 - 代替hs-service
