--- a/zuul_service/pom.xml
+++ b/zuul_service/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.yushu</groupId>
 	<artifactId>zuul_service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>zuul_service</name>
 	<description>Demo project for Spring Boot</description>
