--- a/call_service/src/main/resources/application.properties
+++ b/call_service/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.application.name=call-service
 erueka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 
-feign.client.config.default.connectTimeout=11000
+feign.client.config.default.connectTimeout=1000
 # 设置Feign读取服务接口的超时时间
-feign.client.config.default.readTimeout=12000
+feign.client.config.default.readTimeout=1000
 
 # 接口访问频繁的时候开启熔断降级保护
 feign.hystrix.enabled=true
-# 设置hystrix默认超时时间，默认是1秒
-execution.isolation.thread.timeoutInMilliseconds=12000
+# 设置hystrix(断路)默认超时时间，默认是1秒
+execution.isolation.thread.timeoutInMilliseconds=1000
 
 spring.redis.database=0
 spring.redis.host=127.0.0.1
