--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>eureka_server</module>
         <module>glory_service</module>
         <module>zuul_service</module>
+        <!--<module>config_server</module>-->
     </modules>
 
     <parent>
