--- a/config_server/src/main/resources/application.properties
+++ b/config_server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8990
-spring.application.name=config_server
+spring.application.name=config-server
 erueka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.cloud.config.server.git.uri=https://gitee.com/zhaojianfei_yushu/config_server
