--- a/glory_service/src/main/resources/bootstrap.properties
+++ b/glory_service/src/main/resources/bootstrap.properties
@@ -41,3 +41,9 @@ spring.zipkin.base-url=http://47.92.218.64:9411/
 spring.sleuth.web.client.enabled=true 
 # 默认采样百分比是10%
 spring.sleuth.sampler.probability=1.0
+
+# 指定从哪个配置中心读取 - 注册到Eureka中的服务名
+spring.cloud.config.discovery.service-id=CONFIG-SERVER
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.label=develop
+spring.cloud.config.profile=dev
