--- a/call_service/src/main/resources/bootstrap.properties
+++ b/call_service/src/main/resources/bootstrap.properties
@@ -1,7 +1,5 @@
-# 双开项目的方法 - EditConfiguration 编辑里面-Dserver.port=8771 然后把上面那个single去掉
-
 # 服务的名称
-spring.application.name=glory-service
+spring.application.name=call-service
 # 指定服务的地址,向服务中注册
 erueka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 # 指定从哪个配置中心读取 - 注册到Eureka中的服务名
