--- a/zuul_service/src/main/resources/bootstrap.properties
+++ b/zuul_service/src/main/resources/bootstrap.properties
@@ -1,9 +1,7 @@
-# 双开项目的方法 - EditConfiguration 编辑里面-Dserver.port=8771 然后把上面那个single去掉
-
 # 服务的名称
-spring.application.name=glory-service
+spring.application.name=zuul-service
 # 指定服务的地址,向服务中注册
-erueka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+erueka.client.serviceUrl.defaultZone=http://localhost:8760/eureka/
 # 指定从哪个配置中心读取 - 注册到Eureka中的服务名
 spring.cloud.config.discovery.service-id=CONFIG-SERVER
 spring.cloud.config.discovery.enabled=true
